--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
-<!DOCTYPE html>
+
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>eae</title>
+    <title>Katty Technology</title>
+    <link rel="shortcut icon" href="/assets/img/IconKatty.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg">
+<body>
 
+    <section id="banner">
+        <div>
+            <img src="assets/img/IconKatty.png" width="300">
+            <h3 class="titulo-principal efeitoDigita">Katty Technology</h3>
+        </div>
+    </section>
+
+    <script src="digitando.js"></script>
 </body>
 </html>
