--- a/index.html
+++ b/index.html
@@ -11,11 +11,32 @@
 
     <section id="banner">
         <div>
-            <img src="assets/img/IconKatty.png" width="300">
+            <img class="kattyIcon" src="assets/img/IconKatty.png" width="300">
             <h3 class="titulo-principal efeitoDigita">Katty Technology</h3>
+           <div class="boxSeta">
+                <img class="setaIcon" src="assets/img/arrow.png" width="100" height="100">
+           </div>
         </div>
     </section>
+
+    <section id="quemSomos">
+       <h1>Quem Somos?</h1>
+    </section>
+
+    <section id="projetos">
+        <h1>Projetos</h1>
+     </section>
+
+     <section id="contato">
+        <h1>Contato</h1>
+     </section>
+
+     <footer>
+        <h4 class="text">Katty Technology - Todos Direitos Reservados</h4>
+     </footer>
 
     <script src="digitando.js"></script>
 </body>
 </html>
+
+
