--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Katty Technology</title>
     <link rel="shortcut icon" href="/assets/img/IconKatty.png" type="image/x-icon">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <section id="banner">
-        <div>
-            <img class="kattyIcon" src="assets/img/IconKatty.png" width="300">
+        <div class="divMarginFoto">
+            <img class="kattyIcon" src="assets/img/IconKatty.png" >
             <h3 class="titulo-principal efeitoDigita">Katty Technology</h3>
            <div class="boxSeta">
                 <img class="setaIcon" src="assets/img/arrow.png" width="100" height="100">
@@ -20,20 +21,30 @@
     </section>
 
     <section id="quemSomos">
-       <h1>Quem Somos?</h1>
+       <h1 class="titulos">Quem Somos?</h1>
+       <img  src="assets/img/qmsomos.gif" width="100" height="100">
+       <br>
+       <p class="textoApresentativo">
+        Katty Technology é uma Desenvolvedora Web/Mobile/Games, criada em 2021 por Kauã Maia Aquino e Natália Fernandes de Souza, Produzimos Sites, Ecommerces, Aplicativos Android, Programação de Jogos, Design e muito mais, Serviços de Qualidade com a máxima dedicação ao cliente, venha com a gente faça um orçamento já!
+       </p>
     </section>
 
     <section id="projetos">
-        <h1>Projetos</h1>
+        <h1 class="titulos">Projetos</h1>
+        <img  src="assets/img/projetos.gif" width="100" height="100">
+
      </section>
 
      <section id="contato">
-        <h1>Contato</h1>
+        <h1 class="titulos">Contato</h1>
+        <img  src="assets/img/contato.gif" width="100" height="100">
+   
      </section>
 
      <footer>
-        <h4 class="text">Katty Technology - Todos Direitos Reservados</h4>
+        <h4 class="text">Katty Technology ©<span id="year"></span> - Todos Direitos Reservados</h4>
      </footer>
+
 
     <script src="digitando.js"></script>
 </body>
