Atualizando META TAGS

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="Landing Page da empresa Katty Technology.">
 
+  
+  <meta name="twitter:title" content="Katty Technology">
+  <meta name="twitter:description" content="Landing Page da empresa Katty Technology.">
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/Katty-Technology/katty-technology.github.io/main/assets/assets/images/Logo.png">
+  <meta property="og:title" content="Katty Technology">
+  <meta property="og:type" content="Landing Page" />
+  <meta property="og:description" content="Landing Page da empresa Katty Technology.">
+  <meta property="og:image" content="https://raw.githubusercontent.com/Katty-Technology/katty-technology.github.io/main/assets/assets/images/Logo.png">
+  <meta property="og:url" content="https://katty-technology.github.io/">
+  <meta name="twitter:card" content="summary_large_image">
+
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -23,7 +34,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '1963959866';
+    var serviceWorkerVersion = '3334137347';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
